syntax = "proto3";

option go_package = "grpcdemo/pb";
option csharp_namespace = "Messages";

message File {
  int32 id = 1;
  string folderName = 3;
  string fileName = 4;
  string content = 5;
}

message GetAllRequest {}

message GetByBadgeNumberRequest {
  int32 badgeNumber = 1;
}

message FileRequest {
  Employee employee = 1;
}
message FileResponse {
  Employee employee = 1;
}
message FileRequest {
  bytes data = 1;
}
message FileResponse {
  bool isOk = 1;
}

service CreateResource {
  rpc GetByBadgeNumber (GetByBadgeNumberRequest) returns (EmployeeResponse);
  rpc GetAll (GetAllRequest) returns (stream EmployeeResponse);
  rpc Save (EmployeeRequest) returns (EmployeeResponse);
  rpc SaveAll (stream EmployeeRequest) returns (stream EmployeeResponse);
  rpc AddPhoto (stream AddPhotoRequest) returns (AddPhotoResponse);
}